load("@rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

jsonnet_library(
    name = "output",
    srcs = ["output.libsonnet"],
    visibility = ["//visibility:public"],
)

jsonnet_library(
    name = "patches",
    srcs = ["patches.libsonnet"],
    visibility = ["//visibility:public"],
)

jsonnet_library(
    name = "cluster-config",
    srcs = ["cluster-config.libsonnet"],
    visibility = ["//visibility:public"],
)
